<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="de.syntax_institut.telefonbuch.ui.main.MainFragment"
        android:label="@string/contacts"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_mainFragment_to_editFragment"
            app:destination="@id/editFragment"
            app:enterAnim="@android:anim/fade_in" />
        <action
            android:id="@+id/action_mainFragment_to_addFragment"
            app:destination="@id/addFragment"
            app:enterAnim="@android:anim/fade_in" />
    </fragment>
    <fragment
        android:id="@+id/editFragment"
        android:name="de.syntax_institut.telefonbuch.ui.edit.EditFragment"
        android:label="@string/edit_contact"
        tools:layout="@layout/fragment_edit">
        <action
            android:id="@+id/action_editFragment_to_mainFragment"
            app:destination="@id/mainFragment"
            app:enterAnim="@android:anim/fade_in" />
        <argument
            android:name="contactId"
            android:defaultValue="0L"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/addFragment"
        android:name="de.syntax_institut.telefonbuch.ui.add.AddFragment"
        android:label="@string/add_contact"
        tools:layout="@layout/fragment_add">
        <action
            android:id="@+id/action_addFragment_to_mainFragment"
            app:destination="@id/mainFragment"
            app:enterAnim="@android:anim/fade_in"/>
    </fragment>
</navigation>