<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.add.AddFragment">

        <Button
            android:id="@+id/add_btnAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:text="@string/add"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@+id/add_btnCancel"
            app:layout_constraintEnd_toEndOf="@+id/add_tilNumber"
            app:layout_constraintTop_toBottomOf="@+id/add_tilNumber" />

        <Button
            android:id="@+id/add_btnCancel"
            android:layout_marginEnd="4dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/add_btnAdd"
            app:layout_constraintStart_toStartOf="@+id/add_tilNumber"
            app:layout_constraintTop_toBottomOf="@+id/add_tilNumber" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_tilName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_textInputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_tilNumber"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/add_tilName"
            app:layout_constraintStart_toStartOf="@+id/add_tilName"
            app:layout_constraintTop_toBottomOf="@+id/add_tilName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_textInputNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phoneNumber" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginBottom="16dp"
            app:cardElevation="5dp"
            app:contentPadding="8dp"
            app:layout_constraintBottom_toTopOf="@+id/add_tilName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/add_ivContact"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:src="@drawable/avatar" />
        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>